# ProteinDocking

./: fsglft.h  main.cpp  nfft.cpp  protein.h
include/: fgt.cpp  fgt.h  fsft.cpp  fsft.h  fsglft.cpp  ligand.h  nfft.h  pdb.h
release/: CMakeLists.txt
